InternexDev_Sandbox/src/objects/WebCash_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Store mapping Values for WebCash Upload</description>
    <fields>
        <fullName>API_Name__c</fullName>
        <description>Store Field API Name for Particular Object</description>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Type__c</fullName>
        <description>Store Type for Data</description>
        <label>Data Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_Name__c</fullName>
        <description>Store Sheet&apos;s Header Name for corresponding API Name</description>
        <label>Header Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>Store Object Name</description>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <description>Field is required or not for data loader</description>
        <label>Required</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>LockBox Load Mapping</label>
</CustomObject>